# FFaudiocue

./: .flake8  .gitignore  .pylintrc  AUTHORS  BUGS  CHANGELOG  INSTALL  README.md  TODO  hatch_build.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: python-app.yml  python-package.yml
debian/: README.Debian  changelog  control  copyright  rules
develop/: make_pot.sh
develop/Standalone App/: pyinstaller_setup.py
develop/gettext_utils/: babelutils.py
docs/: Localization_Guidelines.md
ffaudiocue/: gui_app.py
ffaudiocue/data/FFMPEG/: README
ffaudiocue/data/icons/Colored/: COPYING-ICONS.txt
ffaudiocue/data/icons/Dark/: COPYING-ICONS.txt
ffaudiocue/data/icons/Light/: COPYING-ICONS.txt
ffaudiocue/data/locale/: README  ffaudiocue.pot
ffaudiocue/data/locale/ar_SA/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/cs_CZ/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/de_DE/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/en_US/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/es_CU/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/es_ES/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/es_MX/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/fr_FR/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/hu_HU/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/it_IT/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/nl_NL/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/pt_BR/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/ru_RU/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/data/locale/zh_CN/LC_MESSAGES/: ffaudiocue.po
ffaudiocue/ffc_dlg/: cd_info.py  check_new_version.py  infoprg.py  list_warning.py  preferences.py  showlogs.py  track_info.py  widget_utils.py  wizard_dlg.py
ffaudiocue/ffc_inout/: io_tools.py
ffaudiocue/ffc_main/: main_frame.py
ffaudiocue/ffc_panels/: cuesplitter_panel.py
ffaudiocue/ffc_sys/: about_app.py  app_const.py  argparser.py  settings_manager.py
ffaudiocue/ffc_threads/: ffmpeg_processing.py
ffaudiocue/ffc_utils/: get_bmpfromsvg.py  utils.py
ffaudiosplit/: gui_app.py
ffaudiosplit/data/FFMPEG/: README
ffaudiosplit/data/icons/Colored/: COPYING-ICONS.txt
ffaudiosplit/data/icons/Dark/: COPYING-ICONS.txt
ffaudiosplit/data/icons/Light/: COPYING-ICONS.txt
ffaudiosplit/data/locale/: ffaudiosplit.pot
ffaudiosplit/data/locale/it_IT/LC_MESSAGES/: ffaudiosplit.po
ffaudiosplit/data/locale/ru_RU/LC_MESSAGES/: ffaudiosplit.po
ffaudiosplit/ffc_dlg/: cd_info.py  check_new_version.py  infoprg.py  preferences.py  showlogs.py  track_info.py  widget_utils.py  wizard_dlg.py
ffaudiosplit/ffc_inout/: io_tools.py
ffaudiosplit/ffc_main/: main_frame.py
ffaudiosplit/ffc_panels/: cuesplitter_panel.py
ffaudiosplit/ffc_sys/: about_app.py  app_const.py  argparser.py  settings_manager.py
ffaudiosplit/ffc_threads/: ffmpeg_processing.py
ffaudiosplit/ffc_utils/: get_bmpfromsvg.py  utils.py
ffcuesplitter_gui/: gui_app.py
ffcuesplitter_gui/_threads/: ffmpeg_processing.py
ffcuesplitter_gui/data/locale/: ffcuesplittergui.pot
ffcuesplitter_gui/data/locale/it_IT/LC_MESSAGES/: ffcuesplittergui.po
ffcuesplitter_gui/data/locale/ru_RU/LC_MESSAGES/: ffcuesplittergui-ru.po
ffcuesplitter_gui/ffc_dlg/: cd_info.py  check_new_version.py  infoprg.py  preferences.py  showlogs.py  track_info.py  wizard_dlg.py
ffcuesplitter_gui/ffc_inout/: io_tools.py
ffcuesplitter_gui/ffc_main/: main_frame.py
ffcuesplitter_gui/ffc_panels/: cuesplitter_panel.py
ffcuesplitter_gui/ffc_sys/: about_app.py  app_const.py  argparser.py  settings_manager.py
ffcuesplitter_gui/ffc_threads/: ffmpeg_processing.py
ffcuesplitter_gui/ffc_utils/: utils.py
tests/: test_display_GUI.py  test_utils.py
xdg/: io.github.jeanslack.ffaudiocue.appdata.xml  io.github.jeanslack.ffaudiocue.desktop  io.github.jeanslack.ffaudiosplit.appdata.xml  io.github.jeanslack.ffaudiosplit.desktop
