[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ffaudiosplit"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Gianluca Pernigotto", email = "jeanlucperni@gmail.com"}
]
maintainers = [
  {name = "Gianluca Pernigotto", email = "jeanlucperni@gmail.com"}
]
description = "FFaudiosplit is a simple graphical user interface to extracts audio tracks from audio CD images supplied with a CUE sheet."
license =  {text = "GNU General Public License v3 (GPLv3)"}
keywords = [
    "ffcuesplitter",
    "ffaudiosplit",
    "converter",
    "wxpython",
    "ffmpeg"]
classifiers = [
    "Environment :: X11 Applications :: GTK",
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Arabic",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Czech",
    "Natural Language :: Dutch",
    "Natural Language :: English",
    "Natural Language :: French",
    "Natural Language :: German",
    "Natural Language :: Hungarian",
    "Natural Language :: Italian",
    "Natural Language :: Portuguese (Brazilian)",
    "Natural Language :: Russian",
    "Natural Language :: Spanish",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion"
]
dependencies = [
    "ffcuesplitter",
    "wxpython>=4.0.7",
    "pypubsub>=4.0.3",
    "requests>=2.31.0"
]
build = [
    "build",
    "hatchling",
    "pip",
    "six",
    "wheel",
    "setuptools",
    "babel",
]
pyinstaller = [
    "pyinstaller",
]

[tool.hatch.build.hooks.custom]  # see hatch_build.py file
# https://github.com/pypa/hatch/discussions/1047
dependencies = [
    "babel"
]

[tool.hatch.version]
path = "ffaudiosplit/ffc_sys/about_app.py"

[tool.hatch.build.targets.sdist]
include = [
    "ffaudiosplit",
    #"debian",
    #"docs/man",
    "develop",
    #"tests",
    "AUTHORS",
    "BUGS",
    "CHANGELOG",
    "INSTALL",
    "LICENSE",
    "README.md",  # already included as readme
    "TODO",
    "launcher",
    "requirements",
    "xdg",
    ".gitignore",  # already included by default, needed for auto-excludes
    ".flake8",
    ".pylintrc",
]
exclude = [
    "ffaudiosplit/data/icons/ffaudiosplit.icns",
    "ffaudiosplit/data/icons/ffaudiosplit.ico",
    "ffaudiosplit/data/locale/ffaudiosplit.pot",
    "ffaudiosplit/data/locale/README",
    "ffaudiosplit/data/FFMPEG",
]

[tool.hatch.build.targets.wheel]
packages = ["ffaudiosplit"]
artifacts = [
    # https://hatch.pypa.io/latest/config/build/#artifacts
    "*.mo",
]

[tool.hatch.build.targets.wheel.shared-data]
"docs/man/ffaudiosplit.1.gz" = "share/man/man1/ffaudiosplit.1.gz"
"xdg/io.github.jeanslack.ffaudiosplit.appdata.xml" = "share/metainfo/io.github.jeanslack.ffaudiosplit.appdata.xml"
"xdg/io.github.jeanslack.ffaudiosplit.desktop" = "share/applications/io.github.jeanslack.ffaudiosplit.desktop"
"ffaudiosplit/data/icons/ffaudiosplit.png" = "share/pixmaps/ffaudiosplit.png"
"ffaudiosplit/data/hicolor/48x48/apps/ffaudiosplit.xpm" = "share/icons/hicolor/48x48/apps/ffaudiosplit.xpm"
"ffaudiosplit/data/hicolor/48x48/apps/ffaudiosplit.png" = "share/icons/hicolor/48x48/apps/ffaudiosplit.png"
"ffaudiosplit/data/hicolor/256x256/apps/ffaudiosplit.png" = "share/icons/hicolor/256x256/apps/ffaudiosplit.png"
"ffaudiosplit/data/hicolor/scalable/apps/ffaudiosplit.svg" = "share/icons/hicolor/scalable/apps/ffaudiosplit.svg"

[project.gui-scripts]
ffaudiosplit = "ffaudiosplit_app:main"

[project.urls]
Homepage = "https://github.com/jeanslack/FFaudiosplit"
Documentation = "https://github.com/jeanslack/FFaudiosplit/wiki"
Wiki = "https://github.com/jeanslack/FFaudiosplit/wiki"
Repository = "https://github.com/jeanslack/FFaudiosplit"
Issues = "https://github.com/jeanslack/FFaudiosplit/issues"
